--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,6 +1,3 @@
-footer
+footer.footer
 	p
-		| Copyright &copy; #{Time.now.year} TGen. All rights reserved. #{link_to 'Legal', legal_path} #{link_to 'FAQ', faq_path}
-	
-		img src="/assets/comodo_secure_76x26_transp.png" alt="SSL Certificates" width="76" height="26" style="border: 0px;"
-	
+		| #{link_to 'FAQ', faq_path}
