Stylesheet and Bootstrap compatibility updates.

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -64,6 +64,6 @@ div.collapse.navbar-collapse#bs-example-navbar-collapse-1
             = link_to 'Getting Started', getting_started_path
 
 
-div id="search_results"
+div.hidden#search_results
   h1 Search Results
   ul
