--- a/app/assets/stylesheets/landing.css.scss
+++ b/app/assets/stylesheets/landing.css.scss
@@ -31,12 +31,12 @@
 	
 	#splash,
 	#reference_architecture {
-		background: url(/assets/textures/ricepaper/ricepaper.png) repeat;
-		margin: 20px -28px;
-		border-top:					1px solid #ddd;
-		border-bottom:			1px solid #ddd;
-		border-radius: 4px;
-		box-shadow: 0 20px 20px rgba(0,0,0,.8), 0 0px 80px #eee inset;
+		// background: url(/assets/textures/ricepaper/ricepaper.png) repeat;
+		// margin: 20px -28px;
+		// border-top:					1px solid #ddd;
+		// border-bottom:			1px solid #ddd;
+		// border-radius: 4px;
+		box-shadow: 0 20px 20px rgba(0,0,0,.6), 0 0px 80px #ccc inset;
 		-webkit-transition:		all .5s linear;
 		-moz-transition:		all .5s linear;
 		-o-transition:			all .5s linear;
@@ -45,7 +45,7 @@
 	
 	#splash:hover,
 	#reference_architecture:hover {
-		box-shadow: 0 20px 20px rgba(0,0,0,.8), 0 0px 180px #eee inset;
+		box-shadow: 0 40px 40px rgba(0,0,0,1), 0 0px 80px #ccc inset;
 
 		-webkit-transition:	all .5s linear;
 		-moz-transition:		all .5s linear;
