--- a/app/views/users/manage.html.slim
+++ b/app/views/users/manage.html.slim
@@ -3,16 +3,16 @@
 
 #manage
 
-	ul class="nav nav-tabs"
-		li class="active" 
+	ul.nav.nav-tabs
+		li.active
 			a href="#requests" data-toggle="tab" Pending Account Requests
 		li
 			a href="#accounts" data-toggle="tab" Active Accounts
 
-	div class="tab-content"
+	.tab-content
 
-		div class="tab-pane active" id="requests"
-			table
+		.tab-pane.active#requests
+			table.table.table-striped.table-condensed
 				thead
 					tr
 						th Email
@@ -30,8 +30,8 @@
 								=button_to 'Deny', deny_user_path(user), :remote => true, :class => 'btn btn-primary deny', form_class: 'deny button_to', confirm: 'Are you sure you want to deny access to this user?'
 							
 			
-		div class="tab-pane" id="accounts"
-			table.table-condensed
+		.tab-pane#accounts
+			table.table.table-striped.table-condensed.table-border
 				thead
 					tr
 						th Name
