--- a/app/views/welcome/landing.html.slim
+++ b/app/views/welcome/landing.html.slim
@@ -7,8 +7,8 @@ div#landing
 	section.row#splash
 	
 		div.col-md-8#overview_carousel
-			h1 Big Data
-			h4 syndication, replication, and archiving  
+			h1 Big Data Collaboration
+			p.lead Publish and backup massive data sets to a private group of collaborators over the Internet.
 			/ = image_tag 'Architecture Diagram v3.png'
 
 		
@@ -20,21 +20,22 @@ div#landing
 				/ p The dashboard is your gateway to all you torrents and feeds
 			-else
 				h1 Sign in!
-				= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f|
-					div
+				= form_for(resource, :as => resource_name, :url => session_path(resource_name, class: :form), role: :form) do |f|
+					.form-group
 						= f.label :email
-						= f.email_field :email
+						= f.email_field :email, class: 'form-control'
 				
 						= f.label :password
-						= f.password_field :password
+						= f.password_field :password, class: 'form-control'
 				
 					- if devise_mapping.rememberable?
-						div
-							= f.check_box :remember_me
+						.checkbox
 							= f.label :remember_me
-				
+								= f.check_box :remember_me
+								| Remember me!
 					div
-						= f.submit "Sign in"
+						= f.submit "Sign in", class: 'btn btn-default'
+
 				- if devise_mapping.registerable? && controller_name != 'registrations'
 					/ link_to "Sign up", new_registration_path(resource_name)
 					/ Button to trigger modal
