Removing sunspot and old autocomplete dependencies. Boostrap v3 updates.

--- a/app/views/welcome/landing.html.slim
+++ b/app/views/welcome/landing.html.slim
@@ -189,7 +189,7 @@ div#landing
 		div.col-md-6#it_department
 			h3 IT Manageability
 			p Please let your IT department make adequate preparations to prepare for fluctuating use of the overall client network. Specifically, the following checklist can be used as a starting point of consideration when planning to deploy Clients internal to your organization:
-			table
+			table.table.table-condensed.table-striped
 				thead
 					tr
 						th Consideration
